tests/asm-link/pops-restore-no-section/rgbasm.err
error: label defined outside of a section
   ╭─[ test.asm:9:1 ]
   │
 9 │ DisallowedContent:
   │ ────────┬────────  
   │         ╰────────── no section is active at this point
───╯
error: byte emitted outside of a section
    ╭─[ test.asm:10:2 ]
    │
 10 │     db 0
    │     ─┬  
    │      ╰── no section is active at this point
    │ 
    │ Help: consider opening a section with `section` before this
────╯
2 errors generated.
